// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs has a long path with enabled schedules 1`] = `
<div
  className="breadcrumbs breadcrumbs--is-truncated"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb breadcrumb--force-ellipsis"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="breadcrumb"
    >
      <div
        className="breadcrumb__content breadcrumb__content--text"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          foo
        </a>
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        bar
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has a long path with job runs 1`] = `
<div
  className="breadcrumbs breadcrumbs--is-truncated"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb breadcrumb--force-ellipsis"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="breadcrumb"
    >
      <div
        className="breadcrumb__content breadcrumb__content--text"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          foo
        </a>
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        bar
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has a long path with job task and schedule 1`] = `
<div
  className="breadcrumbs breadcrumbs--is-truncated"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb breadcrumb--force-ellipsis"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="breadcrumb"
    >
      <div
        className="breadcrumb__content breadcrumb__content--text"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          foo
        </a>
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        bar
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has a long path with no schedule 1`] = `
<div
  className="breadcrumbs breadcrumbs--is-truncated"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb breadcrumb--force-ellipsis"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="breadcrumb"
    >
      <div
        className="breadcrumb__content breadcrumb__content--text"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          foo
        </a>
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        bar
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has no path with enabled schedules 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Jobs
      </a>
    </div>
    <div
      className="breadcrumb__content breadcrumb__content--supplemental"
    >
      <div
        className="tooltip-wrapper text-align-center"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          className="icon icon-grey icon-mini"
        >
          <use
            xlinkHref="#icon-system--repeat"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has no path with job runs 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Jobs
      </a>
    </div>
    <div
      className="breadcrumb__content breadcrumb__content--supplemental"
    >
      <div
        className="service-page-header-status muted"
      >
        (
        Running
        )
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has no path with job task and schedule 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Jobs
      </a>
    </div>
    <div
      className="breadcrumb__content breadcrumb__content--supplemental"
    >
      <div
        className="tooltip-wrapper text-align-center"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <svg
          className="icon icon-grey icon-mini"
        >
          <use
            xlinkHref="#icon-system--repeat"
          />
        </svg>
      </div>
    </div>
    <div
      className="breadcrumb__content breadcrumb__content--supplemental"
    >
      <div
        className="service-page-header-status muted"
      >
        (
        Running
        )
      </div>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs has no path with no schedule 1`] = `
<div
  className="breadcrumbs"
>
  <div
    className="breadcrumb breadcrumb--is-icon"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className="icon icon-small"
      >
        <use
          xlinkHref="#icon-product--jobs"
        />
      </svg>
    </a>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Jobs
      </a>
    </div>
  </div>
  <div
    className="breadcrumb breadcrumb--is-caret"
  >
    <svg
      className="icon icon-grey icon-mini"
    >
      <use
        xlinkHref="#icon-system--caret-right"
      />
    </svg>
  </div>
  <div
    className="breadcrumb"
  >
    <div
      className="breadcrumb__content breadcrumb__content--text"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        MyJob
      </a>
    </div>
  </div>
</div>
`;
